enable data seeder